<resources>
    <string name="app_name">AU.kg</string>
    <string name="header_title">Все вакансии Кыргызстана</string>
    <string name="header_version_program">Версия: %1s</string>
    <string name="drawer_search_item">Поиск</string>
    <string name="drawer_item_best_vacancies">Избранные вакансии</string>
    <string name="drawer_item_about">О нас</string>
    <string name="drawer_item_exit">Выход</string>
    <string name="todo">TODO</string>
    <string name="textButton">позвонить</string>
    <string name="no_phone_textview">не указан</string>
    <string name="no_salary">договорная</string>
    <string name="au_kg">AU.KG</string>
    <string name="all_vacancies_kyr">Все вакансии Кыргызстана</string>
    <string name="rbTextAny">Любой</string>
    <string name="rbFullDay">Полный день</string>
    <string name="rbTextFlexible">Гибкий</string>
    <string name="rbTextRemotely">Удаленно</string>
    <string name="rbTextNight">Ночной</string>
    <string name="rbCategorySalary">Оклад</string>
    <string name="rbTextFive">5000 +</string>
    <string name="rbTextTen">10000 +</string>
    <string name="rbTextThirty">30000 +</string>
    <string name="btnClear">Сброс</string>
    <string name="btnRbClear">Готово</string>
    <string name="rbCategoryMode">Режим работы</string>
    <string name="tvViewed">Просмотрено</string>
    <string name="text_dialog_call">Выберите телефон</string>

    <string-array name="rbMode">
        <item>Любой</item>
        <item>Полный день</item>
        <item>Гибкий</item>
        <item>Удаленно</item>
        <item>Ночной</item>
    </string-array>

    <string-array name="rbSalary">
        <item>0</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>

    </string-array>

</resources>
