<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.rojsa.laboratorysecondvacanciesapp.ui.DetailsVacancyActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/toolBarStyle" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout

            android:id="@+id/btnPrev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/linear_clickable"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_prev" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Предыдущее"
                android:textColor="@color/md_white_1000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/linear_clickable"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="Следующее"
                android:textColor="@color/md_white_1000" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_next" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="ADSFGHJMSDFGHFHDF"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:id="@+id/linearProfession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/border"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView

                            android:layout_width="16dp"
                            android:layout_height="16dp"

                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_profile_name" />

                        <TextView

                            android:id="@+id/tvJob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:maxLength="60"
                            android:paddingLeft="6dp"
                            android:paddingStart="6dp"
                            android:text="@string/no_phone_textview"
                            android:textSize="14dp" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:gravity="right"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:paddingLeft="6dp"
                            android:paddingStart="6dp"
                            android:text="sadsfasdsf" />
                    </LinearLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageSalary"
                            android:layout_marginTop="2dp"
                            android:layout_width="16dp"
                            app:layout_constraintTop_toTopOf="parent"


                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_height="16dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_salary" />

                        <TextView
                            android:id="@+id/tvSalary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"


                            android:layout_marginStart="5dp"
                            android:maxLength="60"
                            android:padding="3dp"
                            android:paddingLeft="6dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="50dp"


                            android:text="@string/no_salary"
                            android:textSize="14dp"
                            app:layout_constraintEnd_toStartOf="@id/imageSalary"
                            android:paddingRight="50dp" />

                        <TextView
                            android:id="@+id/tvSite"
                            android:padding="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_marginLeft="5dp"

                            android:layout_marginStart="5dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:background="@drawable/textview_back"

                            android:gravity="end"
                            android:maxLength="60"

                            android:paddingLeft="6dp"
                            android:paddingStart="6dp"
                            android:text="sadxs"
                            tools:ignore="RtlHardcoded" />
                    </android.support.constraint.ConstraintLayout>

                    <LinearLayout

                        android:id="@+id/linearSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/linearProfile"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView

                            android:layout_width="16dp"
                            android:layout_height="16dp"

                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_telephone_number" />

                        <TextView
                            android:id="@+id/tvPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:paddingLeft="6dp"
                            android:paddingStart="6dp"
                            android:text="не указан" />

                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:button="@drawable/checkbox_selector"
                            android:focusable="false"
                            android:theme="@style/MyCheckBox"


                            />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorBorders"
                        android:orientation="horizontal" />

                    <TextView

                        android:id="@+id/tvDetailVacancy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@color/backgroundTabs"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingTop="20dp"
        android:text="@string/textButton"
        android:textColor="@color/md_white_1000" />

</LinearLayout>




